# farm-manager

./: .gitignore  FRONTEND_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md
backend/: .env.example  .gitignore  ML_PIPELINE_ROADMAP.md  README.md  mlflow.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: features.py  health.py  health_models.py  memory.py  mlflow_api.py  models.py  pipeline.py
backend/app/core/: config.py  database.py  mlflow_tracking.py
backend/app/features/: __init__.py  health_features.py  health_risk_features.py  weight_features.py
backend/app/models/: __init__.py  health_model.py  schemas.py  weight_model.py
backend/app/services/: embedding.py  extraction.py  feature_pipeline.py  job_store.py  memory.py  profile.py  synthetic_data.py
backend/data/features/: features_2026-01-19.json
backend/migrations/: 001_create_pipeline_jobs.sql
backend/models/: health_model_latest  weight_model_latest
backend/models/health_model_20260121_044256/: metadata.json  treatment_model.pkl
backend/models/health_model_20260121_044520/: decline_model.pkl  label_encoders.pkl  metadata.json
backend/models/health_model_20260121_044544/: metadata.json  risk_model.pkl
backend/models/health_model_20260121_045348/: metadata.json  treatment_model.pkl
backend/models/health_model_20260121_050452/: metadata.json  risk_model.pkl
backend/models/health_model_20260121_060705/: ensemble_models.pkl  (+1 more)
backend/scripts/: mlflow.sh  run.sh
backend/training/: health_risk_prediction.csv  weight_prediction.csv
(+79 files in other folders)
